fix(comp:table): selectable header vertical alignment issue (#652)

--- a/packages/components/table/style/index.less
+++ b/packages/components/table/style/index.less
@@ -160,6 +160,8 @@
   }
 
   & &-cell-selectable {
+    display: flex;
+    align-items: center;
     & > .@{idux-prefix}-dropdown-trigger {
       margin-left: 4px;
     }
